--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -1,4 +1,12 @@
 <div class="m-3">
+  <div class="mb-2">
+    <div class="d-flex justify-content-end">
+      <button class="btn btn-primary">
+        <i class="fas fa-check"></i>
+        Publish Form</button>
+    </div>
+  </div>
+
   <div class="card">
     <div class="card-header">
       <div class="d-flex justify-content-between">
@@ -304,7 +312,7 @@
                 </ng-container>
               </ng-container>
 
-              <div class="mt-2 d-flex justify-content-end">
+              <div class="mt-2 d-flex justify-content-start">
                 <button class="btn btn-primary btn-sm" (click)="viewFieldSelectionSidePanel(section.id)"><i
                     class="fas fa-plus-circle"></i> Add Field</button>
               </div>
