--- a/NgImForm/src/app/pages/form-preview-page/form-preview-page.component.html
+++ b/NgImForm/src/app/pages/form-preview-page/form-preview-page.component.html
@@ -1,1 +1,6 @@
+<div class="m-1">
+    <a class="btn btn-success ms-1" [routerLink]="['/form-build']">Go to Build</a>
+</div>
+<hr>
+
 <app-form-preview [preset]="form"></app-form-preview>
