--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -175,7 +175,41 @@
                       <div class="row">
                         <div class="col-8">
                           <div class="form-group">
-                            <label class="mb-1"><b>{{element.fileFieldComponent.label}}</b></label>
+                            <div class="mb-1">
+                              <div class="d-flex justify-content-between">
+                                <div>
+                                  <label><b>{{element.fileFieldComponent.label}}</b></label>
+                                </div>
+
+                                <div>
+                                  <ng-container *ngIf="element.fileFieldComponent.isHidden; else tbNotHidden">
+                                    <span class="badge bg-danger">Hidden</span>
+                                  </ng-container>
+                                  <ng-template #tbNotHidden>
+                                    <span class="badge bg-success">Not Hidden</span>
+                                  </ng-template>
+
+                                  <span class="ms-1"></span>
+
+                                  <ng-container *ngIf="element.fileFieldComponent.isReadOnly; else tbNotReadonly">
+                                    <span class="badge bg-danger">Readonly</span>
+                                  </ng-container>
+                                  <ng-template #tbNotReadonly>
+                                    <span class="badge bg-success">Not Readonly</span>
+                                  </ng-template>
+
+                                  <span class="ms-1"></span>
+
+                                  <ng-container *ngIf="element.fileFieldComponent.isRequired; else tbNotRequired">
+                                    <span class="badge bg-success">Required</span>
+                                  </ng-container>
+                                  <ng-template #tbNotRequired>
+                                    <span class="badge bg-danger">Not Required</span>
+                                  </ng-template>
+                                </div>
+                              </div>
+                            </div>
+
                             <input type="file" class="{{element.fileFieldComponent.class}}" style="width: 100%;">
                           </div>
                         </div>
