--- a/NgImForm/src/app/modules/form-preview/form-preview.component.html
+++ b/NgImForm/src/app/modules/form-preview/form-preview.component.html
@@ -130,6 +130,58 @@
                                         </ng-container>
                                     </div>
                                 </ng-container>
+
+                                <ng-container *ngIf="element.selectBoxComponent">
+                                    <div class="form-group mb-3" [hidden]="element.selectBoxComponent.isHidden">
+                                        <label class="mb-1"><b>{{element.selectBoxComponent.label}}</b></label>
+
+                                        <ng-container
+                                            *ngIf="!element.selectBoxComponent.isMultiple; else multiSelectSection">
+                                            <select class="{{element.selectBoxComponent.class}}"
+                                                formControlName="{{element.selectBoxComponent.name}}">
+                                                <option *ngIf="element.selectBoxComponent.placeholder" value="">
+                                                    {{element.selectBoxComponent.placeholder}}</option>
+                                                <ng-container *ngFor="let option of element.selectBoxComponent.options">
+                                                    <option [value]="option.value" [selected]="option.selected">
+                                                        {{option.text}}</option>
+                                                </ng-container>
+                                            </select>
+
+                                            <ng-container *ngIf="element.selectBoxComponent.isRequired">
+                                                <small
+                                                    *ngIf="isSubmitClicked && form.controls[element.selectBoxComponent.name]?.errors && form.controls[element.selectBoxComponent.name]?.errors?.['required']"
+                                                    class="text-danger">{{element.selectBoxComponent.requiredMessage}}</small>
+                                            </ng-container>
+                                        </ng-container>
+
+                                        <ng-template #multiSelectSection>
+                                            <select class="{{element.selectBoxComponent.class}}"
+                                                formControlName="{{element.selectBoxComponent.name}}" multiple>
+                                                <option *ngIf="element.selectBoxComponent.placeholder" [value]="null"
+                                                    [selected]="!element.selectBoxComponent.isMultiple" disabled>
+                                                    {{element.selectBoxComponent.placeholder}}</option>
+                                                <ng-container *ngFor="let option of element.selectBoxComponent.options">
+                                                    <option [value]="option.value" [selected]="option.selected">
+                                                        {{option.text}}</option>
+                                                </ng-container>
+                                            </select>
+
+                                            <div class="d-flex justify-content-between">
+                                                <div>
+                                                    <ng-container *ngIf="element.selectBoxComponent.isRequired">
+                                                        <small
+                                                            *ngIf="isSubmitClicked && form.controls[element.selectBoxComponent.name]?.errors && form.controls[element.selectBoxComponent.name]?.errors?.['required']"
+                                                            class="text-danger">{{element.selectBoxComponent.requiredMessage}}</small>
+                                                    </ng-container>
+                                                </div>
+
+                                                <div class="text-primary">
+                                                    <small>Press Ctrl for Mutiple Select & Deselect</small>
+                                                </div>
+                                            </div>
+                                        </ng-template>
+                                    </div>
+                                </ng-container>
                             </ng-container>
                         </div>
                     </div>
